Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-19034

cdb crash with cmd agruments

    XMLWordPrintable

Details

    • Bug
    • Status: Closed
    • Not Evaluated
    • Resolution: Done
    • Qt Creator 4.4.1
    • Qt Creator 4.5.0-rc1
    • Debugger
    • None
    • b248953247926a02409c5a699d174f2228c429b1

    Description

      if you attach to an runnig process thrue the output debug button, debugger cannot be startet if you have some commandline arguments.

       

      ErrorLog:

      Launching C:\Program Files (x86)\Windows Kits\10\Debuggers\x86\cdb.exe -aqtcreatorcdbext.dll -lines -G -c .idle_cmd !qtcreatorcdbext.idle -2 -y "" -p 11420 -e

      Missing argument for -e

      ERROR: Der Prozess ist abgestürzt

      CDB PROCESS FINISHED, status 1, exit code -2147024809

       

      -------------------------

      "-e" is in this case an command line argument from run settings is project config.

      if you delete the argument from the config attach works....

       

       

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            davschul David Schulz
            braty Thomas Hasart
            Votes:
            2 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes