src/plugins/debugger/cdb/cdbengine.cpp
@@ -476,6 +476,11 @@ void CdbEngine::setupEngine()
             nativeArguments.push_back(blank);
         QtcProcess::addArgs(&nativeArguments,
                             QStringList(QDir::toNativeSeparators(sp.inferior.executable)));
+        if (!sp.inferior.commandLineArguments.isEmpty()) { // Complete native argument string.
+            if (!nativeArguments.isEmpty())
+                nativeArguments.push_back(blank);
+            nativeArguments += sp.inferior.commandLineArguments;
+        }
         break;
     case AttachToRemoteServer:
         break;
@@ -495,11 +500,6 @@ void CdbEngine::setupEngine()
     default:
         handleSetupFailure(QString("Internal error: Unsupported start mode %1.").arg(sp.startMode));
         return;
-    }
-    if (!sp.inferior.commandLineArguments.isEmpty()) { // Complete native argument string.
-        if (!nativeArguments.isEmpty())
-            nativeArguments.push_back(blank);
-        nativeArguments += sp.inferior.commandLineArguments;
     }
 
     const QString msg = QString("Launching %1 %2\nusing %3 of %4.").
